--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,14 @@
 			<version>2.2.14</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.hamcrest/hamcrest -->
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest</artifactId>
+			<version>2.2</version>
+			<scope>test</scope>
+		</dependency>
+
 
 	</dependencies>
 
