--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,11 @@
 		</dependency>
 
 
+		<dependency>
+			<groupId>TYSS</groupId>
+			<artifactId>Assignments</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 
